--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -27,6 +27,7 @@ $color_darkgreen: #4a804a;
 $color_darklightgreen: #4a7f4a;
 $color_blue: #4867aa;
 $color_red: #eb5757;
+$color_darkred: #ae3737;
 %width {
     width: 4rem;
     height: 6rem;
