--- a/src/app/Modules/catalog/catalog.component.html
+++ b/src/app/Modules/catalog/catalog.component.html
@@ -164,7 +164,9 @@
             ></button>
           </div>
         </div>
-        <app-catalog-items></app-catalog-items>
+        <div class="item">
+          <app-catalog-items></app-catalog-items>
+        </div>
       </div>
     </div>
   </div>
