--- a/src/app/Modules/registration/error-form/error.component.scss
+++ b/src/app/Modules/registration/error-form/error.component.scss
@@ -14,6 +14,7 @@
 }
 @media (max-width: 640px) {
     .alert-name {
-        left: -6.3rem;
+        left: 28.8rem;
+        bottom: 6.8rem;
     }
 }
