--- a/src/app/Modules/catalog/catalog.component.scss
+++ b/src/app/Modules/catalog/catalog.component.scss
@@ -124,6 +124,9 @@
 .filter-max {
     @include font(Montserrat, normal, 400, 1.6rem, 170%, 0em, $color_grey);
 }
+.item {
+    height: 144rem;
+}
 :host {
     ::ng-deep p-inputnumber.p-element.p-inputwrapper {
         height: 5rem;
@@ -319,11 +322,24 @@
     margin-bottom: 2rem;
 }
 .container-banners {
-    margin-left: 14%;
+    margin-left: 13%;
 }
 @media (max-width: 1460px) {
     .wrapper-catalog {
         width: 100%;
+    }
+}
+@media (max-width: 1435px) {
+    .item {
+        height: 186rem;
+    }
+}
+@media (max-width: 1145px) {
+    .container-catalog {
+        margin-bottom: 7.6rem;
+    }
+    .item {
+        height: 100%;
     }
 }
 @media (max-width: 970px) {
