--- a/src/app/Modules/contacts/contacts.component.scss
+++ b/src/app/Modules/contacts/contacts.component.scss
@@ -174,6 +174,9 @@ input[type="number"]:focus {
 .disabled:hover {
     background: $color_grey;
 }
+.disabled:active {
+    padding-top: 0;
+}
 .has-error {
     border: 1px solid $color_pink;
     border-radius: 4px;
