--- a/src/app/Modules/home/swiper-list/swiper-list.component.html
+++ b/src/app/Modules/home/swiper-list/swiper-list.component.html
@@ -14,7 +14,7 @@
           <a
             class="container__link"
             routerLink="/catalog"
-            [queryParams]="{ name: item.name }"
+            [queryParams]="{ name: item.name, id: item.id }"
           >
             <img class="item-image" [src]="getImage(item.photo)" alt="logo1" />
             <h6 class="h6">{{ item.name }}</h6>
