--- a/src/app/Modules/home/items/items.component.scss
+++ b/src/app/Modules/home/items/items.component.scss
@@ -2,7 +2,7 @@
 @import "../../../styles/_mixins.scss";
 
 .container__items {
-    margin: 0 0 0 12%;
+    margin: 0 0 10rem 12%;
     flex-wrap: wrap;
 }
 .container__wrap {
