--- a/src/app/Modules/home/items/items.component.html
+++ b/src/app/Modules/home/items/items.component.html
@@ -1,14 +1,21 @@
 <div class="container__items flex">
-    <div class="container__wrap" *ngFor="let item of itemsData|async">
-        <div class="container__item" >
-            <img [src]="getItemImage(item.photo)" alt="img1" class="image-item">
-            <h5 class="container__title">{{item.name}}</h5>
-            <h6 class="opacity">{{item.category.name}}</h6>
-            <p class="container__paragraph">€{{item.priceDto.price}} EUR</p>
-            <button class="button">
-                <img id="imageBaggy" src="../../../../assets/img-home/button-bag.png" alt="baggy">
-                <p class="button__paragraph">ADD TO CART</p>
-            </button>
-        </div>
+  <div
+    class="container__wrap"
+    *ngFor="let item of itemsData | async | search: searchInput"
+  >
+    <div class="container__item">
+      <img [src]="getItemImage(item.photo)" alt="img1" class="image-item" />
+      <h5 class="container__title">{{ item.name }}</h5>
+      <h6 class="opacity">{{ item.category.name }}</h6>
+      <p class="container__paragraph">€{{ item.priceDto.price }} EUR</p>
+      <button class="button" (click)="addToCart(item)">
+        <img
+          id="imageBaggy"
+          src="../../../../assets/img-home/button-bag.png"
+          alt="baggy"
+        />
+        <p class="button__paragraph">ADD TO CART</p>
+      </button>
     </div>
+  </div>
 </div>
